// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeInput renders correctly 1`] = `
<div>
  <div
    class="css-2ohkpz-boxStyles-FieldContainer"
  >
    <label
      class="css-12ek51e-boxStyles"
      for="field-:r0:"
    >
      <span
        class="css-1sf8c0k-boxStyles"
      >
        Time
      </span>
      <span
        class="css-1ru6lht-boxStyles"
      >
         
        (e.g. 9:30 pm) (optional)
      </span>
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      class="css-mtd7ku"
      id="field-:r0:"
      type="text"
      value=""
    />
    <div
      aria-hidden="true"
      class="css-1r6wwux-Field"
    />
  </div>
</div>
`;

exports[`TimeInput updates correctly based on the \`value\` prop 1`] = `
<div>
  <div
    class="css-2ohkpz-boxStyles-FieldContainer"
  >
    <label
      class="css-12ek51e-boxStyles"
      for="field-:r2:"
    >
      <span
        class="css-1sf8c0k-boxStyles"
      >
        Time
      </span>
      <span
        class="css-1ru6lht-boxStyles"
      >
         
        (e.g. 9:30 pm) (optional)
      </span>
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      class="css-mtd7ku"
      id="field-:r2:"
      type="text"
      value="9:30 pm"
    />
    <div
      aria-hidden="true"
      class="css-1r6wwux-Field"
    />
  </div>
</div>
`;
